--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <header>
                 <h1>Hi, I’m</h1>
                 <h1>Naveen Bijalwan</h1>
-                <p>AN SOFTWARE ARCHITECT AND DATA SCIENTIST</p>
+                <p>A SOFTWARE ARCHITECT AND DATA SCIENTIST</p>
             </header>
             <p>Hands-on architect having 18+ years of experience with a strong technical background and excellent communication skills. He has Software Development and Business Analytics experience in BFSI, Financial, Investment Banking (Front Office, Middle Office, and Back Office), Money Transfer, Operations, Marketing and Advertisement, Accounting / Audit, Customer Service, Consumer Lending, Automobile, Hospitality, Insurance and Pharmaceutical / Health Care industries specializing in Real-Time Web Services, GUI, Multithreading, Algorithmic Trading, Quantitative Trading Analytics, Straight Through Processing (STP), High Performance, Low Latency and High Volume Transactional Critical Data applications.</p>
         </div>
