--- a/index.html
+++ b/index.html
@@ -53,6 +53,40 @@
             border-radius: 50%;
             margin-top: 20px;
         }
+		        h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background: #fff;
+            border-bottom: 1px solid #ddd;
+            padding: 20px;
+            margin-bottom: 10px;
+        }
+
+        li:last-child {
+            border-bottom: none;
+        }
+		.cloud-skills {
+            margin-top: 30px;
+            text-align: center;
+        }
+
+        .cloud-skills a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +103,44 @@
             <img src="e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855_240210121513.png" alt="Profile Picture">
             <!-- Replace 'your-profile-pic.png' with the actual path to your profile picture -->
         </span>
+			    <!-- Cloud Skills Section -->
+    <div class="cloud-skills">
+        <a href="https://www.cloudskillsboost.google/public_profiles/67a7337c-b772-4067-9c7c-8c2e9b95fa08" target="_blank">Cloud Skills Profile</a>
+    </div>
     </section>
+
+    <h2>List of Publications</h2>
+ <ul>
+        <li>Closed form Vaidya-Tikekar type charged fluid spheres with pressure
+            <br>Astrophysics and Space Science 334, 293-299, 2011
+        </li>
+        <li>Nonsingular charged analogues of Schwarzschild’s interior solution
+            <br>Astrophysics and Space Science 317 (3-4), 251-260, 2008
+        </li>
+        <li>Exact solutions: classical electron model
+            <br>Astrophysics and Space Science 336, 485-489, 2011
+        </li>
+        <li>Charged analogues of Schwarzschild interior solution in terms of pressure
+            <br>Astrophysics and Space Science 336 (2), 413-418, 2011
+        </li>
+        <li>Static electrically charged fluids in terms of pressure: general property
+            <br>Astrophysics and Space Science 334, 139-143, 2011
+        </li>
+        <li>Higher Dimensional Extension of Charged and Neutral Fluid Spheres with Pressure
+            <br>International Journal of Theoretical Physics 51, 23-34, 2012
+        </li>
+        <li>Closed form charged fluid with t = constant hypersurfaces as spheroids and hyperboloids
+            <br>Astrophysics and Space Science 337, 455-462, 2012
+        </li>
+        <li>Exact solutions: neutral and charged static perfect fluids with pressure
+            <br>Astrophysics and Space Science 337, 161-167, 2012
+        </li>
+        <li>Charged sphere of shear-free fluids with ∂/∂ρ ∂r ≤ 0
+            <br>General Relativity and Gravitation 37, 1911-1918, 2005
+        </li>
+        <li>Comment: On charged analogue of shear-free fluids
+            <br>General Relativity and Gravitation 38, 981-982, 2006
+        </li>
+    </ul>
 </body>
 </html>
